# namel3ss-apps

./: LICENSE  README.md
apps/rag-demo/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CTO_RENDERER_REGISTRY_INCIDENT.md  Dockerfile  LIMITATIONS_REPORT.md  PHASE1_SPEC.md  README.md  ROADMAP.md  UI_SPEC.md  app.ai  docker-compose.yml  pyproject.toml  run.sh  smoke.sh
apps/rag-demo/.namel3ss/: tools.yaml
apps/rag-demo/assets/: sample-architecture.txt  sample-policy.txt  sample-product.txt  sample.md  sample.txt
apps/rag-demo/docs/: configuration.md  deploy-render.md  determinism-and-citations.md  docker.md  evaluation.md  how-rag-works-in-namel3ss.md  how-to-extend-the-demo.md  read-the-code.md  url-snapshots.md  yc-demo-script.md  yc-faq.md
apps/rag-demo/docs/images/: README.md
apps/rag-demo/docs/recipes/: add-eval-metric.md  add-source-type.md  customize-ui-copy.md
apps/rag-demo/eval/: README.md  golden.json  invariants_report.json  report_baseline.json  run_eval.py
apps/rag-demo/examples/rag_workspace/: app.ai
apps/rag-demo/modules/rag_engine/: capsule.ai  citation_drawer_flows.ai  contracts.ai  document_ingestion_flows.ai  document_library_flows.ai  document_tag_flows.ai  project_flows.ai  rag_bootstrap_flows.ai  rag_records.ai  retrieval_answer_core_flows.ai  retrieval_answer_finalize_flows.ai  (+2 more)
apps/rag-demo/scripts/: fetch_url_snapshot.py
apps/rag-demo/tests/: smoke.sh  test_eval_runner.py  test_rag_demo_smoke.py  test_rag_flow.py
apps/rag-demo/tools/: ensure_provider_manifests.py  extract_query_keywords.py  normalize_query_text.py
(+43 files in other folders)
