[project]
name = "namel3ss-rag-demo"
version = "0.1.0"
description = "Polished deterministic RAG demo built with Namel3ss"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "namel3ss==0.1.0a18",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
